[gd_scene load_steps=9 format=3 uid="uid://cdxe7xm1c3k4c"]

[ext_resource type="Script" path="res://Game/Characters/MrDpsCheck.gd" id="1_heh67"]
[ext_resource type="Texture2D" uid="uid://bif4mrx81pnne" path="res://Game/enemy_i_guess.png" id="2_cgm6w"]
[ext_resource type="PackedScene" uid="uid://b3kkvxuchiw3k" path="res://Shadow.tscn" id="3_e0e2j"]
[ext_resource type="Texture2D" uid="uid://h6pfyrw2rt0g" path="res://Game/progress2.png" id="4_yybs7"]
[ext_resource type="Texture2D" uid="uid://chrsnd64xwe8h" path="res://Game/progress.png" id="5_54xgy"]

[sub_resource type="BoxShape3D" id="BoxShape3D_sgyt2"]
size = Vector3(0.8, 1.2, 0.8)

[sub_resource type="BoxShape3D" id="BoxShape3D_5najl"]

[sub_resource type="BoxShape3D" id="BoxShape3D_i1evy"]
size = Vector3(1, 2, 1)

[node name="Enemy" type="CharacterBody3D" groups=["Entity"]]
transform = Transform3D(6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0)
collision_layer = 8192
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_heh67")

[node name="CollisionShape3d" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
shape = SubResource("BoxShape3D_sgyt2")

[node name="Visual" type="Node3D" parent="."]

[node name="Sprite3d" type="Sprite3D" parent="Visual"]
offset = Vector2(0, 96)
pixel_size = 0.0078
texture = ExtResource("2_cgm6w")

[node name="RayCast3d" parent="Visual/Sprite3d" instance=ExtResource("3_e0e2j")]

[node name="Progress" type="Sprite3D" parent="Visual/Sprite3d"]
unique_name_in_owner = true
transform = Transform3D(60, 0, 0, 0, 10, 0, 0, 0, 10, 0, 1.355, -0.5)
texture = ExtResource("4_yybs7")

[node name="Bar" type="Sprite3D" parent="Visual/Sprite3d/Progress"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.05)
texture = ExtResource("5_54xgy")

[node name="Area3d" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 0
collision_mask = 16

[node name="CollisionShape3d2" type="CollisionShape3D" parent="Area3d"]
shape = SubResource("BoxShape3D_5najl")

[node name="DpsCheckForcefield" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 4096

[node name="CollisionShape3d" type="CollisionShape3D" parent="DpsCheckForcefield"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_i1evy")

[connection signal="body_entered" from="Area3d" to="." method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="DpsCheckForcefield" to="." method="_on_dps_check_forcefield_body_entered"]
